<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/tourScroll"
        android:layout_width="330dp"
        android:layout_height="269dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="44dp"
        android:textStyle="bold"
        android:background="@drawable/textview_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="286dp"
        tools:layout_conversion_absoluteWidth="349dp">
        <!--        app:layout_constraintBottom_toTopOf="@+id/bottomNavView"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintHorizontal_bias="0.516"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toTopOf="parent"-->
        <!--        app:layout_constraintVertical_bias="0.192">-->


        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:orientation="vertical"></LinearLayout>-->
        <LinearLayout
            android:id="@+id/scrollLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        </LinearLayout>


    </ScrollView>

    <TextView
        android:id="@+id/total"
        android:layout_width="74dp"
        android:layout_height="31dp"
        android:layout_marginBottom="8dp"
        android:text="@string/total"
        android:textColor="#120000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.878"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="32dp" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="#120000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="32dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_people"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="117dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additional_notes"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.706"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="105dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="104dp"
        android:text="@string/amount_payable"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.011"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="106dp" />

    <Button
        android:id="@+id/addToCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="92dp"
        android:text="@string/add_to_cart"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="104dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="382dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:text="@string/all_city_tours_contain_transfer_lunch_attraction_tickets"
        android:textColor="#000000"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="16dp"
        tools:layout_conversion_absoluteWidth="287dp" />

    <TextView
        android:id="@+id/amount_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <Button
        android:id="@+id/buttonDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="16dp"
        android:text="@string/select_date"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        tools:layout_conversion_absoluteHeight="41dp"
        tools:layout_conversion_absoluteWidth="124dp" />

    <Spinner
        android:id="@+id/number_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:entries="@array/number_array"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.649"
        tools:layout_conversion_absoluteHeight="26dp"
        tools:layout_conversion_absoluteWidth="53dp" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:layout_marginBottom="72dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewSelectedDate"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner3"
        tools:layout_conversion_absoluteHeight="72dp"
        tools:layout_conversion_absoluteWidth="411dp" />


    <TextView
        android:id="@+id/textViewSelectedDate"
        android:layout_width="100dp"
        android:layout_height="41dp"
        android:paddingTop="12dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589"
        tools:layout_conversion_absoluteHeight="36dp"
        tools:layout_conversion_absoluteWidth="123dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="0dp"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="0dp">

            <TextView
                android:id="@+id/services_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:text="Services"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/cart_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:text="Cart(0)"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/about_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:text="About"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="413dp"
        android:layout_height="42dp"
        android:background="#008EFF"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="202dp"
            android:layout_height="34dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="174dp"
            android:layout_marginBottom="2dp"
            android:background="#008EFF"
            android:text="Seoul Stay - City Tours"
            android:textColor="#000000"
            android:textSize="18dp"
            android:textStyle="bold" />
    </RelativeLayout>


    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
    <!--        android:id="@+id/bottomNavView"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        tools:layout_conversion_absoluteHeight="56dp"-->
    <!--        tools:layout_conversion_absoluteWidth="411dp"></com.google.android.material.bottomnavigation.BottomNavigationView>-->


</androidx.constraintlayout.widget.ConstraintLayout>

<!--    <FrameLayout-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="673dp"-->
<!--        tools:layout_editor_absoluteX="1dp"-->
<!--        tools:layout_editor_absoluteY="1dp">-->

<!--    </FrameLayout>-->

